# kafka-cost-control

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.html  README.md  build.sh  config.html  index.yaml
.github/: dependabot.yml
.github/workflows/: asciidoctor-ghpages.yaml  build-aggregator.yaml  build-confluent-agent.yaml  ghpages.yaml  (+9 more)
aggregator/: docker-compose.yaml  pom.xml
architecture/: index.html
config/: context-data.json  index.js  package.json  pricing-rules.json  queries.graphql
config-sample/: README.md  context-data.json  index.js  package.json
confluent-agent/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
confluent-agent/confluent_scraping_agent/: config.py  metric.py  metric_output.py  metric_source.py
confluent-agent/tests/: request.json  resp-page-1.json  resp-page-2.json  test_metric.py  test_metric_output.py  test_metric_source.py
dev/: kafka-cluster.yaml  kind-cluster.yaml  setup.sh  teardown.sh  topic.yaml
docs/: README.adoc  build.sh  config.adoc  weighted-cost-split.md
example/: README.md
frontend/: .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  angular.json  docker-compose.yaml  eslint.config.js  nginx.conf  package-lock.json  package.json  proxy.conf.json
installation/: index.html
kafka-connect/: Dockerfile  Dockerfile.strimzi  README.md  docker-compose.yaml
kafka-scraper/: README.md  docker-compose.yaml  pom.xml
manual/: index.html
strimzi-operator/: .gitignore  PROJECT  README.md  pom.xml
(+417 files in other folders)
